# jaxragged

./: .gitignore  README.md  pyproject.toml
examples/: basic.py
src/jaxragged/: __init__.py  ragged.py
tests/: test_ragged.py
