[project]
name = "jaxragged"
version = "0.1.0"
authors = [
    {name = "Patrick Power"}
]
description = "A JAX jaxpr interpreter for transparent masking of ragged arrays."
readme = "README.md"
license = "MIT"
requires-python = ">= 3.11"
dependencies = [
    "jax>=0.4.0",
]

[project.urls]
Source = "https://github.com/ppower1/jaxragged"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxragged"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "jaxlib",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
